# maf-hands-on

./: .dockerignore  .env.sample  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CONVENTIONS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
.github/: copilot-instructions.md
.github/agents/: code-efficiency-reviewer.agent.md  code-quality-reviewer.agent.md  code-reuse-reviewer.agent.md  maf-agent-advisor.agent.md  maf-infra-advisor.agent.md  maf-reviewer.agent.md  maf-workflow-advisor.agent.md  test-fixer.agent.md  test-runner.agent.md  test-verifier.agent.md
.github/hooks/: hooks.json
.github/instructions/: api.instructions.md  maf.instructions.md  test.instructions.md
config/: platform-policy.yaml
config/agents/: document_classifier.yaml  expense_checker.yaml  faq_responder.yaml
deployment/backend/: Dockerfile.local  docker-entrypoint.sh
docs/: agent-development-guide.md  workflow-development-guide.md
docs/adr/: 001-python-toolchain.md  002-folder-structure-and-layered-architecture.md  003-cosmos-db-persistence-layer.md  004-catalog-boilerplate-design.md  005-rearchitecture-agents-registry.md  006-foundry-as-enterprise-control-plane.md  007-otel-first-observability.md  008-dag-workflow-parallel-execution.md  009-platform-core-and-colocation.md  template.md
docs/research/: 260405_maf_1.0.0機能全体調査.md  260405_maf_compaction深掘り.md  260405_maf_evaluation深掘り.md  260405_python-toolchain_AI駆動開発ツール選定.md  260410_foundry_agent_service_schema.md  260410_foundry_maf_security_auth.md  (+6 more)
(+260 files in other folders)
